Clean up appsettings

--- a/CustomerAPI/appsettings.json
+++ b/CustomerAPI/appsettings.json
@@ -6,9 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ItemContext": "Server=(localdb)\\mssqllocaldb;Database=ItemContext-1b6ad160-2c75-4464-9be2-90af682379d7;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "CustomerAPIContext": "Server=(localdb)\\mssqllocaldb;Database=CustomerAPIContext-1a591328-5de9-4e3a-ba5a-a9be8a029c30;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
